// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds document node through constructor 1`] = `
Object {
  "child": [Function],
  "id": "foo",
  "options": Object {
    "id": "docId",
    "templateParameters": Object {
      "foo": "bar",
    },
    "type": "book",
  },
  "type": "document",
  "views": Array [
    Object {
      "icon": undefined,
      "id": "editor",
      "title": "Editor",
      "type": "form",
    },
  ],
}
`;

exports[`can construct using builder (alt) 1`] = `
Object {
  "child": [Function],
  "id": "yeah",
  "options": Object {
    "id": "wow",
    "type": "book",
  },
  "type": "document",
  "views": Array [
    Object {
      "icon": undefined,
      "id": "editor",
      "title": "Editor",
      "type": "form",
    },
  ],
}
`;

exports[`can construct using builder 1`] = `
Object {
  "child": [Function],
  "id": "yeah",
  "options": Object {
    "id": "wow",
    "template": "book-by-author",
    "templateParameters": Object {
      "authorId": "grrm",
    },
    "type": "book",
  },
  "type": "document",
  "views": Array [
    Object {
      "icon": undefined,
      "id": "editor",
      "title": "Editor",
      "type": "form",
    },
  ],
}
`;

exports[`can construct with schema type instead of schema type name 1`] = `
Object {
  "child": [Function],
  "id": "yeah",
  "options": Object {
    "id": "wow",
    "type": "post",
  },
  "type": "document",
  "views": Array [
    Object {
      "icon": undefined,
      "id": "editor",
      "title": "Editor",
      "type": "form",
    },
  ],
}
`;
